--- a/kubernetes/service.yaml
+++ b/kubernetes/service.yaml
@@ -1,14 +1,15 @@
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: binlogik
-  labels:
-    run: binlogik
-spec:
-  ports:
-  - name: metrics
-    port: 9292
-    targetPort: metrics
-  selector:
-    run: binlogik
+#---
+#apiVersion: v1
+#kind: Service
+#metadata:
+#  name: binlogik
+#  labels:
+#    run: binlogik
+#spec:
+#  type: NodePort
+#  ports:
+#  - name: metrics
+#    port: 9292
+#    targetPort: metrics
+#  selector:
+#    run: binlogik
