--- a/kubernetes/mysql/configmap.yaml
+++ b/kubernetes/mysql/configmap.yaml
@@ -11,6 +11,7 @@ data:
     binlog_rows_query_log_events=true
     max_binlog_size=40960
     log-bin=/var/lib/mysql/mysql
+    ignore-db-dir=lost+found
   grants.sql: |-
     CREATE TABLE test.test (id INT AUTO_INCREMENT PRIMARY KEY NOT NULL);
     GRANT REPLICATION CLIENT ON *.* TO 'binlogik'@'%';
