try specific checkout path

--- a/.github/workflows/primary.yml
+++ b/.github/workflows/primary.yml
@@ -19,10 +19,14 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+      with:
+        path: /home/app/${{ github.repository }}
 
     - name: bootstrap
       run: |
+        cd /home/app/${{ github.repository }}
         polly generate
+        exit 2
 
     - name: Log in to the Container registry
       uses: docker/login-action@v1
