--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -24,7 +24,7 @@ spec:
         - "bundle"
         - "exec"
         - "binlogik"
-        - "--debug-follow"
+        - "--debug-follow=foo"
         stdin: false
         stdinOnce: false
         tty: false
@@ -48,7 +48,7 @@ spec:
         - "bundle"
         - "exec"
         - "binlogik"
-        - "--debug-workload"
+        - "--debug-workload=foo"
         stdin: false
         stdinOnce: false
         tty: false
