update pollyci bits

--- a/.github/workflows/primary.yml
+++ b/.github/workflows/primary.yml
@@ -8,25 +8,24 @@ env:
 
 jobs:
   build:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
 
     permissions:
       contents: read
       packages: write
 
     container:
-      image: ghcr.io/unhookd/polly@sha256:26a504146bb7bf6c18fec80a1784e8152a3c6cabeaded74317f1ba7d1fa15400
-      options: "--user 0"
+      image: ghcr.io/unhookd/polly:3.0-rc1@sha256:7cc65086b101fe352a8ff83180888f0f7079b2f80139b0f39ba7b2a4cb34b168
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
 
     - name: bootstrap
       run: |
         polly generate > Dockerfile
 
     - name: Log in to the Container registry
-      uses: docker/login-action@v1
+      uses: docker/login-action@v2
       with:
         registry: ${{ env.REGISTRY }}
         username: ${{ github.actor }}
@@ -34,7 +33,7 @@ jobs:
 
     - name: Extract metadata (tags, labels) for Docker
       id: meta
-      uses: docker/metadata-action@v3
+      uses: docker/metadata-action@v4
       with:
         images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
         tags: |
@@ -45,7 +44,7 @@ jobs:
 
     - name: Set up Docker Buildx
       id: buildx
-      uses: docker/setup-buildx-action@v1
+      uses: docker/setup-buildx-action@v2
 
     - name: Inspect builder
       run: |
@@ -56,7 +55,7 @@ jobs:
         echo "Platforms: ${{ steps.buildx.outputs.platforms }}"
 
     - name: Build and push Docker image
-      uses: docker/build-push-action@v2
+      uses: docker/build-push-action@v3
       with:
         context: .
         push: true
