--- a/.github/workflows/primary.yml
+++ b/.github/workflows/primary.yml
@@ -15,6 +15,7 @@ jobs:
       packages: write
 
     container:
+      options: "--user 0"
       image: ghcr.io/unhookd/polly:3.0-rc1@sha256:7cc65086b101fe352a8ff83180888f0f7079b2f80139b0f39ba7b2a4cb34b168
 
     steps:
