add mysql8 support

--- a/kubernetes/mysql/deployment.yaml
+++ b/kubernetes/mysql/deployment.yaml
@@ -17,7 +17,8 @@ spec:
       #hostNetwork: true
       containers:
       - name: mysql
-        image: "mysql:5.7.33"
+        #image: "mysql:5.7.33"
+        image: "mysql:8.0.32"
         imagePullPolicy: "IfNotPresent"
         resources:
           requests:
