--- a/kubernetes/mysql/configmap.yaml
+++ b/kubernetes/mysql/configmap.yaml
@@ -11,13 +11,13 @@ data:
     binlog_rows_query_log_events=true
     expire_logs_days=1
     log-bin=/var/lib/mysql/mysql
-    ignore-db-dir=lost+found
     max_binlog_size=524288
     gtid_mode=ON
     enforce_gtid_consistency=ON 
     init_connect=SET collation_connection = utf8mb4_unicode_ci
     character-set-server = utf8mb4
     collation-server = utf8mb4_unicode_ci
+    #ignore-db-dir=lost+found
     #binlog_cache_size=16384
     #max_binlog_cache_size=32768
     #binlog_stmt_cache_size=16384
