add rudimentary support for binlog_row_metadata=FULL

--- a/kubernetes/mysql/job.yaml
+++ b/kubernetes/mysql/job.yaml
@@ -22,7 +22,7 @@ spec:
         - sh
         - -ex
         - -c
-        - "cat /etc/mysql/initial-grants.sql | mysql --connect-timeout=30 --port=3366 -h${MYSQL_SERVICE_HOST} -uroot -p${MYSQL_ROOT_PASSWORD}"
+        - "cat /etc/mysql/initial-grants.sql | mysql --connect-timeout=90 --wait --port=3366 -h${MYSQL_SERVICE_HOST} -uroot -p${MYSQL_ROOT_PASSWORD}"
         resources:
           requests:
             cpu: 10m
