--- a/kubernetes/mysql/configmap.yaml
+++ b/kubernetes/mysql/configmap.yaml
@@ -17,14 +17,10 @@ data:
     init_connect=SET collation_connection = utf8mb4_unicode_ci
     character-set-server = utf8mb4
     collation-server = utf8mb4_unicode_ci
-    #ignore-db-dir=lost+found
-    #binlog_cache_size=16384
-    #max_binlog_cache_size=32768
-    #binlog_stmt_cache_size=16384
-    #max_binlog_stmt_cache_size=32768
+    binlog_row_metadata=FULL
   grants.sql: |-
     CREATE TABLE test.test (id INT AUTO_INCREMENT PRIMARY KEY NOT NULL, created_at DATETIME NOT NULL, description TEXT NOT NULL, extra BLOB NOT NULL);
     GRANT REPLICATION CLIENT ON *.* TO 'binlogik'@'%';
     GRANT REPLICATION SLAVE ON *.* TO 'binlogik'@'%';
     GRANT SELECT ON *.* TO 'binlogik'@'%';
-    PURGE BINARY LOGS BEFORE (DATE(NOW()) + INTERVAL 0 SECOND);
+    PURGE BINARY LOGS BEFORE NOW(); TRUNCATE test.test; FLUSH BINARY LOGS;
